Fixed the layout issues in banner section

--- a/HTML/css/concept1/style.css
+++ b/HTML/css/concept1/style.css
@@ -333,7 +333,7 @@ header#masthead{
 	width: 100%;
 	background: url("../../images/concept1/banner.jpg");
 	background-repeat: no-repeat;
-	background-position: center;
+	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -343,15 +343,14 @@ header#masthead{
 	width: 100%;
 	height: 80px;
 	background: url("../../images/concept1/top_bar.png");
-	background-repeat: no-repeat;
+	background-repeat: repeat;
 	background-position: center;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	/*
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 5;
+	*/
 }
 
 .branding-row{
@@ -377,7 +376,7 @@ ul#social-media-icons li{
 }
 
 #banner-message{
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-size: 58px;
 }
 
@@ -385,32 +384,39 @@ ul#social-media-icons li{
 	margin-top: 80px;
 }
 
+/*
 #banner-message-row{
 	margin-top: 55px;
 }
+*/
 
 #get-in-touch-section{
 	width: 360px;
-	height: 405px;
+	height: 408px;
 	background: url("../../images/concept1/get_in_touch_section.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	padding: 28px 28px 28px 28px;
+	padding: 25px 25px 25px 25px;
 }
 
 #get-in-touch-section-form{
-	margin-top: 28px;
+	margin-top: 20px;
 }
 
 .form-vertical-margin-top{
-	margin-top: 28px;
+	margin-top: 20px;
 }
 
 .form-vertical-margin-bottom{
-	margin-bottom: 28px;
+	margin-bottom: 20px;
+}
+
+.form-panel-title{
+	font-size: 28px;
+	color: whitesmoke;
 }
 
 /*--------------------------------------------------------------
